--- a/src/assets/css/branding.css
+++ b/src/assets/css/branding.css
@@ -1,15 +1,27 @@
 :root {
+  --brand-base-grid: 1260px;
   --brand-red: #96031A;
   --brand-black: #1B1B1E;
   --brand-grey: #6D676E;
   --brand-white: #FBFFFE;
   --brand-yellow: #FAA916;
-  /* also add font sizes etc here as well */
+  --text-size-xs: 0.38rem;
+  --text-size-sm: 0.62rem;
+  --text-size-md: 1rem;
+  --text-size-lg: 1.62rem;
+  --text-size-xl: 2.62rem;
+  --text-size-2xl: 4.24rem;
+  --text-size-3xl: 6.85rem;
+  --text-size-4xl: 11.09rem;
+  --text-size-5xl: 17.94rem;
+  color-scheme: light dark;
 }
 
-/**
- * TODO: Add font classes and styling here as default
- */
+/* colours */
+
+html, body {
+  background: var(--brand-white);
+}
 
 * {
   font-size: 16px;
@@ -53,4 +65,75 @@
 
 .text-yellow {
   color: var(--brand-yellow);
+}
+
+/* text */
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: false;
+  line-height: 1.65;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: true;
+  line-height: 1.15;
+}
+
+h1,
+.text-size-h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+  margin-top: 0;
+  font-size: var(--text-size-4xl);
+}
+
+h2,
+.text-size-h2 {
+  font-size: var(--text-size-3xl);
+}
+
+h3,
+.text-size-h3 {
+  font-size: var(--text-size-2xl);
+}
+
+h4,
+.text-size-h4 {
+  font-size: var(--text-size-xl);
+}
+
+h5,
+.text-size-h5 {
+  font-size: var(--text-size-lg);
+}
+
+.text-caption {
+  font-size: var(--text-size-sm);
+}
+
+small,
+.text-small {
+  font-size: var(--text-size-xs);
+}
+
+/* links */
+
+
+/* buttons */
+a.button,
+button {
+  background: white;
+  min-width: 120px;
+  text-align: center;
+  padding: .5rem 1.125rem;
+  border-radius: 20px;
+  color: var(--brand-black);
+  font-weight: bold;
+  cursor: pointer;
 }
