--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -2,3 +2,4 @@
 @import "../../components/organisms/Header/Header.css";
 @import "../../components/organisms/Footer/Footer.css";
 @import "../../components/atoms/Content/Content.css";
+@import "../../components/molecules/Navigation/Navigation.css";
