--- a/src/components/organisms/Header/Header.css
+++ b/src/components/organisms/Header/Header.css
@@ -3,9 +3,16 @@ header {
 }
 
 header .logo {
-  font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
+  outline: 2px solid var(--brand-black);
+  padding: .5rem .75rem;
+}
+
+header .logo:focus-visible {
+  outline-color: var(--brand-white);
+  color: var(--brand-black);
+  background: var(--a11y-focus-yellow);
 }
 
 header > .content-skipper {
@@ -15,11 +22,11 @@ header > .content-skipper {
   font-size: 0px;
 }
 
-header > .content-skipper:focus {
+header > .content-skipper:focus-visible {
   position: relative;
   inset: 0px;
   font-size: 1em;
-  padding: 1em;
+  margin: .5rem;
 }
 
 header > .content {
