Chore: added a not found/404 page (#3)
- also made some other light changes - some style amends to the main navigation (should be mobile first but no design - winging it)

--- a/src/components/molecules/Navigation/style.css
+++ b/src/components/molecules/Navigation/style.css
@@ -11,15 +11,16 @@ nav.site-navigation a {
   padding: .5rem .75rem;
   margin-left: .5rem;
   outline: 2px solid var(--brand-black);
+  text-decoration: none;
 }
 
 nav.site-navigation a:focus-visible {
   outline-color: var(--brand-white);
-  text-decoration: none;
   background: var(--a11y-focus-yellow);
   color: var(--brand-black);
+  text-decoration: underline;
 }
 
 nav.site-navigation a:hover {
-  text-decoration: none;
+  text-decoration: underline;
 }
