--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -1,6 +1,6 @@
 :root {
   --normal-font: 'Open Sans', sans-serif;
-  --heading-font: "Oswald", serif;
+  --heading-font: 'Oswald', serif;
   --brand-base-grid: 1260px;
   --brand-red: #96031A;
   --brand-black: #1B1B1E;
