Chore: style amends and new atoms (#17)
* Chore: style amends and new atoms
- new button, icon and link stom components added
- styles updated and refined (and more to come as the app and library grow)
- favicon assets added
- navigation styles updated
- global links updated (related to above)
- optimaised image assets dropped into new /optimised dir
- new stories added but need to be tested
- TODO: write tests for all components

* Added some updates:
- styles need tidying up
- TODO: add heading component *in new branch

* Made a bunch of changes and really need to stop and make smaller PRs from hereonin...

---------

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/public/css/branding.css
+++ b/public/css/branding.css
@@ -56,6 +56,8 @@ body {
   font-family: var(--normal-font);
   font-weight: false;
   word-break: all;
+  text-underline-offset: 0.125rem;
+  text-underline-position: under;
 }
 
 h1,
@@ -110,18 +112,26 @@ small,
 }
 
 /* links */
-
-
-/* buttons */
-a.button,
-button {
-  background: white;
-  min-width: 120px;
-  text-align: center;
-  padding: .5rem 1.125rem;
-  border-radius: 20px;
+a:focus-visible,
+button:focus-visible {
+  outline-color: var(--brand-white);
   color: var(--brand-black);
-  font-weight: bold;
-  cursor: pointer;
-  outline: none;
+  background: var(--a11y-focus-yellow);
+}
+
+nav a:not(.current) {
+  text-decoration: none;
+}
+
+button,
+.btn {
+  border: 2px solid transparent;
+}
+
+.btn--primary.btn--outline {
+  border: 2px solid var(--brand-white);
+}
+
+.btn--secondary.btn--outline {
+  border: 2px solid var(--brand-red);
 }
