--- a/src/components/atoms/Button/style.css
+++ b/src/components/atoms/Button/style.css
@@ -1,7 +1,10 @@
 /* buttons */
 a.btn,
 button,
-button.btn {
+button.btn,
+button.btn--outline,
+a.btn--outline {
+  display: inline-block;
   min-width: 120px;
   text-align: center;
   padding: .5rem 1.125rem;
@@ -10,4 +13,25 @@ button.btn {
   cursor: pointer;
   outline: none;
   text-decoration: none;
+
+  &:focus {
+    text-decoration: underline;
+  }
+}
+
+nav a:not(.current) {
+  text-decoration: none;
+}
+
+button,
+.btn {
+  border: 2px solid transparent;
+}
+
+.btn--primary.btn--outline {
+  border: 2px solid var(--brand-white);
+}
+
+.btn--secondary.btn--outline {
+  border: 2px solid var(--brand-red);
 }
