--- a/src/components/organisms/Banner/style.css
+++ b/src/components/organisms/Banner/style.css
@@ -1,17 +1,33 @@
 .banner {
   display: grid;
   width: 100%;
-  height: calc(100vh - 8rem);
   grid-auto-flow: column;
   grid-auto-columns: 1fr;
   grid-auto-rows: min-content;
   /* overflow-x: clip; */
   gap: 1rem;
-  margin: 0px 0px 4rem;
 }
 
-.banner__content {
-  grid-column: span 4;
+.banner--image {
+  display: grid;
+  width: 100%;
+  min-height: calc(100vh - 53.5px);
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: min-content;
+  /* overflow-x: clip; */
+  gap: 1rem;
+  align-content: center;
+}
+
+.banner .banner__content {
+  grid-column: span 14;
+  align-self: center;
+  z-index: 1;
+}
+
+.banner--image .banner__content {
+  grid-column: span 6;
   align-self: center;
   z-index: 1;
 }
@@ -28,11 +44,10 @@
   grid-column: span 8;
 }
 
-.banner img {
+.banner--image img {
   display: block;
   object-fit: cover;
-  width: 110%;
-  height: calc(100vh - 8rem);
-  margin-left: -10%;
-  box-shadow: 20px 20px 60px black;
+  width: 130%;
+  height: calc(100vh - 107px);
+  margin-left: -30%;
 }
