Made a bunch of style changes (#21)
- 404 page slight changes
- mvp goal: landing page to hide the work

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -36,4 +36,10 @@
 
   /* transitions */
   --transition: .3s ease-in-out;
+
+  /* breakpoints */
+  --breakpoint-xs: 320;
+  --breakpoint-sm: 768;
+  --breakpoint-md: 960;
+  --breakpoint-lg: 1420;
 }
