--- a/public/css/branding.css
+++ b/public/css/branding.css
@@ -75,20 +75,41 @@ h1,
 .text-size-h1 {
   font-weight: 400;
   margin-top: 0;
-  font-size: var(--text-size-4xl);
-  line-height: 1;
-}
-
-h2,
-.text-size-h2 {
   font-size: var(--text-size-3xl);
   line-height: 1;
 }
 
-h3,
-.text-size-h3 {
+@media screen and (min-width: 768px) {
+  h1,
+  .text-size-h1 {
+    font-size: var(--text-size-4xl);
+  }
+}
+
+h2,
+.text-size-h2 {
   font-size: var(--text-size-2xl);
   line-height: 1;
+}
+
+@media screen and (min-width: 480px) {
+  h2,
+  .text-size-h2 {
+    font-size: var(--text-size-3xl);
+  }
+}
+
+h3,
+.text-size-h3 {
+  font-size: var(--text-size-1xl);
+  line-height: 1;
+}
+
+@media screen and (min-width: 480px) {
+  h3,
+  .text-size-h3 {
+    font-size: var(--text-size-2xl);
+  }
 }
 
 h4,
