--- a/src/components/atoms/Content/style.css
+++ b/src/components/atoms/Content/style.css
@@ -1,8 +1,10 @@
-.content-grid,
-.content-grid.full {
-  display: grid;
-  grid-template-columns: 
-    [full-width-start] 100px [breakout-start] 100px [content-start] 1fr [content-end] 100px [breakout-end] 100px [full-width-end];
+@media screen and (min-width: 1024px) {
+  .content-grid,
+  .content-grid.full {
+    display: grid;
+    grid-template-columns: 
+      [full-width-start] 100px [breakout-start] 100px [content-start] 1fr [content-end] 100px [breakout-end] 100px [full-width-end];
+  }
 }
 
 .content-grid > *,
