--- a/src/components/organisms/Banner/style.css
+++ b/src/components/organisms/Banner/style.css
@@ -9,15 +9,23 @@
 }
 
 .banner--image {
+  position: relative;
   display: grid;
+  align-items: center;
+  justify-items: center;
   width: 100%;
-  min-height: calc(100vh - 53.5px);
-  grid-auto-flow: column;
-  grid-auto-columns: 1fr;
-  grid-auto-rows: min-content;
-  /* overflow-x: clip; */
-  gap: 1rem;
-  align-content: center;
+}
+
+@media screen and (min-width: 1024px) {
+  .banner--image {
+    min-height: calc(100vh - 53.5px);
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+    grid-auto-rows: min-content;
+    /* overflow-x: clip; */
+    gap: 1rem;
+    align-content: center;
+  }
 }
 
 .banner .banner__content {
@@ -27,9 +35,22 @@
 }
 
 .banner--image .banner__content {
-  grid-column: span 6;
-  align-self: center;
-  z-index: 1;
+  position: absolute;
+  padding: 0px 2rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .banner--image .banner__content {
+    position: relative;
+    grid-column: span 10;
+    align-self: center;
+    z-index: 1;
+  }
+}
+@media screen and (min-width: 1279px) {
+  .banner--image .banner__content {
+    grid-column: span 6;
+  }
 }
 
 .banner__content ul {
@@ -47,7 +68,16 @@
 .banner--image img {
   display: block;
   object-fit: cover;
-  width: 130%;
   height: calc(100vh - 107px);
-  margin-left: -30%;
+  width: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+  .banner--image img {
+    display: block;
+    object-fit: cover;
+    width: 130%;
+    height: calc(100vh - 107px);
+    margin-left: -30%;
+  }
 }
