--- a/src/components/organisms/Banner/style.css
+++ b/src/components/organisms/Banner/style.css
@@ -6,6 +6,7 @@
   grid-auto-rows: min-content;
   /* overflow-x: clip; */
   gap: 1rem;
+  margin: 3rem 0px;
 }
 
 .banner--image {
@@ -18,7 +19,7 @@
 
 @media screen and (min-width: 1024px) {
   .banner--image {
-    min-height: calc(100vh - 53.5px);
+    min-height: 100%;
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
     grid-auto-rows: min-content;
@@ -33,6 +34,7 @@
   align-self: center;
   z-index: 10;
   padding: 5rem 1rem;
+  max-width: 100%;
 }
 
 @media screen and (min-width: 1024px) {
@@ -94,7 +96,7 @@
     display: block;
     object-fit: cover;
     width: 130%;
-    height: calc(100vh - 107px);
+    height: 80vh;
     margin-left: -30%;
   }
 }
