feature/general-improvements (#28)
Changes to be committed:
	modified:   src/components/organisms/Banner/__snapshots__/Banner.test.jsx.snap
	modified:   src/components/organisms/Banner/index.tsx
	modified:   src/components/organisms/Banner/style.css
	modified:   src/components/organisms/Header/style.css
	modified:   src/data/pages/maintenanceMode.data.tsx
	modified:   src/helpers/layoutSpacingHandler.ts
	modified:   src/helpers/layouts.tsx

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/src/components/organisms/Header/style.css
+++ b/src/components/organisms/Header/style.css
@@ -3,17 +3,32 @@ header {
   z-index: 20;
   position: -webkit-sticky;
   position: sticky;
-  top: -1px;
+  top: 1rem;
 }
 
 header > .content {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   max-width: var(--brand-base-grid);
   margin: 1rem;
   background: var(--brand-white);
-  padding: 0.5rem 2rem 0.5rem 0.5rem;
+  padding: 1rem 2rem 1rem 1rem;
+}
+
+header > .content:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: calc(100% + 2rem);
+  left: 0px;
+  top: -1rem;
+  bottom: 0px;
+  right: 0px;
+  background-color: rgb(0 0 0 / 30%);
+  backdrop-filter: blur(8px);
+  z-index: -1;
 }
 
 header nav.site-navigation > ul {
