--- a/src/components/organisms/Banner/style.css
+++ b/src/components/organisms/Banner/style.css
@@ -1,12 +1,5 @@
-.banner {
-  display: grid;
-  width: 100%;
-  grid-auto-flow: column;
-  grid-auto-columns: 1fr;
-  grid-auto-rows: min-content;
-  /* overflow-x: clip; */
-  gap: 1rem;
-  margin: 3rem 0px;
+.banner.first-element {
+  margin: 1rem;
 }
 
 .banner--image {
