feature/section-styling (#29)
* feature/section-styling
 On branch feature/section-styling
 Changes to be committed:
	modified:   public/css/branding.css
	modified:   public/css/reset.css
	modified:   src/components/atoms/Button/style.css
	modified:   src/components/atoms/Content/index.tsx
	modified:   src/components/atoms/Content/style.css
	modified:   src/components/organisms/Banner/index.tsx
	modified:   src/data/pages/about.data.tsx
	modified:   src/data/pages/maintenanceMode.data.tsx
	modified:   src/helpers/layoutSpacingHandler.ts
	modified:   src/helpers/layouts.tsx
	modified:   src/types/branding.ts

* Moderniser import wasn't right, should be good now!

* Removed reset for now

---------

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/public/css/branding.css
+++ b/public/css/branding.css
@@ -69,6 +69,7 @@ h5 {
   font-family: var(--heading-font);
   font-weight: true;
   line-height: 1;
+  margin: 0px;
 }
 
 h1,
@@ -88,20 +89,20 @@ h1,
 
 h2,
 .text-size-h2 {
-  font-size: var(--text-size-2xl);
+  font-size: var(--text-size-xl);
   line-height: 1;
 }
 
 @media screen and (min-width: 480px) {
   h2,
   .text-size-h2 {
-    font-size: var(--text-size-3xl);
+    font-size: var(--text-size-2xl);
   }
 }
 
 h3,
 .text-size-h3 {
-  font-size: var(--text-size-1xl);
+  font-size: var(--text-size-xl);
   line-height: 1;
 }
 
