--- a/src/components/atoms/Content/style.css
+++ b/src/components/atoms/Content/style.css
@@ -1,3 +1,8 @@
+.content-grid {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 @media screen and (min-width: 1024px) {
   .content-grid,
   .content-grid.full {
