--- a/src/components/organisms/Header/style.css
+++ b/src/components/organisms/Header/style.css
@@ -3,7 +3,11 @@ header {
   z-index: 20;
   position: -webkit-sticky;
   position: sticky;
-  top: 1rem;
+  top: 0px;
+  background: var(--brand-yellow);
+  background-color: rgb(0 0 0 / 30%);
+  backdrop-filter: blur(8px);
+  padding: 1rem 0px;
 }
 
 header > .content {
@@ -12,23 +16,9 @@ header > .content {
   align-items: center;
   justify-content: space-between;
   max-width: var(--brand-base-grid);
-  margin: 1rem;
+  margin: 0px 1rem;
+  padding: 1rem;
   background: var(--brand-white);
-  padding: 1rem 2rem 1rem 1rem;
-}
-
-header > .content:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: calc(100% + 2rem);
-  left: 0px;
-  top: -1rem;
-  bottom: 0px;
-  right: 0px;
-  background-color: rgb(0 0 0 / 30%);
-  backdrop-filter: blur(8px);
-  z-index: -1;
 }
 
 header nav.site-navigation > ul {
@@ -54,6 +44,6 @@ header nav.site-navigation a:hover {
 @media screen and (min-width: 1320px) {
   header > .content {
     width: 100%;
-    margin: 1rem auto;
+    margin: 0px auto;
   }
 }
