chore/maintenance-mode-amendment (#35)
modified:   public/css/branding.css
	modified:   src/components/molecules/Socials/style.css
	modified:   src/components/organisms/Footer/style.css
	modified:   src/components/organisms/Header/index.tsx
	modified:   src/components/organisms/Header/style.css
	modified:   src/data/pages/about.data.tsx
	modified:   src/data/pages/maintenanceMode.data.tsx
	modified:   src/data/routes.tsx
	modified:   src/helpers/layouts.tsx

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/src/components/molecules/Socials/style.css
+++ b/src/components/molecules/Socials/style.css
@@ -1,10 +1,12 @@
 nav.socials a {
   display: flex;
   color: var(--brand-white);
+  outline: 2px solid transparent;
 }
 
 nav.socials a:focus {
-  color: var(--brand-black);
+  outline: 2px solid white;
+  background: var(--brand-black);
 }
 
 nav.socials ul {
