feature/navigation-mvp (#38)
modified:   public/css/branding.css
	renamed:    public/images/optimised/pexels-jack-davis-86003658-9069564-lg.webp -> public/images/optimised/milkyway-galaxy-forest-lg.webp
	renamed:    public/images/optimised/pexels-jack-davis-86003658-9069564-md.webp -> public/images/optimised/milkyway-galaxy-forest-md.webp
	renamed:    public/images/optimised/pexels-jack-davis-86003658-9069564-xl.webp -> public/images/optimised/milkyway-galaxy-forest-xl.webp
	modified:   src/components/atoms/Button/index.tsx
	modified:   src/components/atoms/Content/style.css
	modified:   src/components/molecules/Navigation/index.tsx
	modified:   src/components/organisms/Banner/index.tsx
	modified:   src/components/organisms/Header/index.tsx
	modified:   src/components/organisms/Header/style.css
	modified:   src/data/pages/about.data.tsx
	modified:   src/data/pages/home.data.tsx
	modified:   src/data/pages/maintenanceMode.data.tsx
	modified:   src/helpers/layouts.tsx

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/public/css/branding.css
+++ b/public/css/branding.css
@@ -65,8 +65,8 @@ h3,
 h4,
 h5 {
   font-family: var(--heading-font);
-  font-weight: true;
   line-height: 1;
+  word-wrap: break-word;
   margin: 0px;
 }
 
