feature/menu-accessibility-improvements (#39)
Changes to be committed:
	new file:   public/css/animations.css
	modified:   public/css/branding.css
	modified:   public/css/global.css
	modified:   public/css/variables.css
	modified:   src/components/atoms/Content/style.css
	modified:   src/components/molecules/Navigation/index.tsx
	modified:   src/components/organisms/Footer/style.css
	modified:   src/components/organisms/Header/index.tsx
	modified:   src/components/organisms/Header/style.css
	modified:   src/data/navigations.ts
	modified:   src/data/pages/about.data.tsx

Co-authored-by: Kurtis Rogers <kurtmcmurt@gmqil.com>

--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -14,8 +14,8 @@
   --brand-yellow: #FAA916;
 
   /* gradients */
-  --brand-primary-gradient: linear-gradient(135deg, var(--brand-black) 0%, var(--brand-red) 50%, var(--brand-yellow) 100%);
-  --brand-secondary-gradient: linear-gradient(90deg, var(--brand-red) 0%, var(--brand-black) 0%, var(--brand-white) 100%);
+  --brand-primary-gradient: linear-gradient(-45deg, var(--brand-black), var(--brand-red), var(--brand-yellow), var(--brand-white));
+  --brand-secondary-gradient: linear-gradient(-45deg, var(--brand-black), var(--brand-white));
 
   /* focus colour */
   --a11y-focus-yellow: yellow;
@@ -33,13 +33,14 @@
 
   /* border radius */
   --border-radius: .5rem;
-
-  /* transitions */
-  --transition: .3s ease-in-out;
-
+  
   /* breakpoints */
   --breakpoint-xs: 320;
   --breakpoint-sm: 768;
   --breakpoint-md: 960;
   --breakpoint-lg: 1420;
+  
+  /* animations */
+  --transition: .3s ease-in-out;
+  --brand-gradient-transiiton: gradient 15s ease infinite;
 }
