--- a/public/css/branding.css
+++ b/public/css/branding.css
@@ -74,14 +74,14 @@ h1,
 .text-size-h1 {
   font-weight: 400;
   margin-top: 0;
-  font-size: var(--text-size-3xl);
+  font-size: var(--text-size-2xl);
   line-height: 1;
 }
 
 @media screen and (min-width: 768px) {
   h1,
   .text-size-h1 {
-    font-size: var(--text-size-4xl);
+    font-size: var(--text-size-3xl);
   }
 }
 
@@ -100,14 +100,14 @@ h2,
 
 h3,
 .text-size-h3 {
-  font-size: var(--text-size-xl);
+  font-size: var(--text-size-lg);
   line-height: 1;
 }
 
 @media screen and (min-width: 480px) {
   h3,
   .text-size-h3 {
-    font-size: var(--text-size-2xl);
+    font-size: var(--text-size-xl);
   }
 }
 
