--- a/public/css/branding.css
+++ b/public/css/branding.css
@@ -1,10 +1,7 @@
-/* container rules */
-
-/* colours */
-
 html, body {
   background: var(--brand-black);
   margin: 0px;
+  scroll-behavior: smooth;
 }
 
 * {
@@ -151,4 +148,63 @@ button:focus-visible {
 
 #maincontent {
   margin: 1rem;
+}
+
+/* buttons */
+a.btn,
+button,
+button.btn,
+button.btn--outline,
+a.btn--outline {
+  position: relative;
+  display: inline-block;
+  text-align: end;
+  padding: 1rem 0.25rem 0px 2rem;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+
+  &:focus {
+    text-decoration: underline;
+  }
+}
+
+nav a:not(.current) {
+  text-decoration: none;
+}
+
+button,
+.btn {
+  border: 2px solid transparent;
+}
+
+.btn--primary.btn--outline {
+  border: 2px solid var(--brand-white);
+}
+
+.btn--secondary.btn--outline {
+  border: 2px solid var(--brand-red);
+}
+
+a.btn:before,
+button:before,
+button.btn:before,
+button.btn--outline:before,
+a.btn--outline:before {
+  content: "";
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  height: 5px;
+  width: 5px;
+  border-top: 2px solid;
+  border-left: 2px solid;
+}
+
+a.btn:before,
+button:before,
+button.btn:before {
+  left: 0px;
+  top: 0px;
 }
